Fixed modal on smaller window size
Also added a shitty favicon

--- a/static/chat.css
+++ b/static/chat.css
@@ -33,7 +33,7 @@
   position: fixed;
   z-index: 10;
   left: 0px;
-  top: 0px;
+  top: 50px;
   width: 100%;
   height: 100%;
   background-color: rgba(37, 10, 61, 0.5);
@@ -45,7 +45,7 @@
   padding: 20px;
   border: 3px solid #30113b;
   height: 40%;
-  width: 500px;
+  max-width: 500px;
   overflow-y: auto;
   box-shadow: 10px 10px 10px rgba(37, 10, 61, 0.7);
 }
