--- a/static/watis.css
+++ b/static/watis.css
@@ -34,7 +34,7 @@
   position: fixed;
   z-index: 10;
   left: 0px;
-  top: 0px;
+  top: 50px;
   width: 100%;
   height: 100%;
   background-color: rgba(37, 10, 61, 0.5);
@@ -46,7 +46,7 @@
   padding: 20px;
   border: 3px solid #30113b;
   height: 60%;
-  width: auto;
+  max-width: auto;
   overflow-y: auto;
   box-shadow: 10px 10px 10px rgba(37, 10, 61, 0.7);
 }
